[package]
name = "moon_os"
version = "0.1.0"
authors = ["Emoon <gustavo.chicato@usp.br>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"  # assists creation of bootable image
volatile = "0.2.6"    # volatile variables avoid compiler optimizing away data
spin = "0.5.2"        # spinlock mutex for synchronized safe internal mutability
x86_64 = "0.14.2"     # enables port-mapped I/O abstractions
uart_16550 = "0.2.0"  # implements UART to send data over serial port

[dependencies.lazy_static]  # delegates initialization of static variables
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]  # allows shutdown of QEMU in testing
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
        "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33  # maps ExitCode::Success, (0x10000 << 1) | 1, to 0

[[test]]
name = "should_panic"
harness = false
